test/types/coerce/allNumericsBinaryWithGeneric.good
allNumericsBinaryWithGeneric.chpl:57: In function 'callF':
allNumericsBinaryWithGeneric.chpl:65: error: ambiguous call 'f(real(32), complex(64))'
allNumericsBinaryWithGeneric.chpl:45: note: candidates are: f(x: complex(64), y: complex(64))
allNumericsBinaryWithGeneric.chpl:48: note:                 f(x: complex(128), y: complex(128))
allNumericsBinaryWithGeneric.chpl:52: note:                 f(x, y)
  allNumericsBinaryWithGeneric.chpl:99: called as callF(type t1 = real(32), type t2 = complex(64)) from function 'callFVaryT2'
  allNumericsBinaryWithGeneric.chpl:118: called as callFVaryT2(type t1 = real(32))
